--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,121 @@ img,
 video {
   display: block;
 }
+
+body {
+  background-color: #c4d2f5;
+}
+
+.player-track-title {
+  font-family: Inter;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.player-track-artist {
+  color: var(--gray, #909090);
+  text-align: center;
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 10px;
+}
+
+.box {
+  display: flex;
+  margin: 80px;
+  width: 440px;
+  padding: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+
+  border-radius: 20px;
+  background: var(--white, #fff);
+  box-shadow: 0px 0px 0px 20px rgba(255, 254, 254, 0.15);
+}
+
+/* ----- player time ---- */
+
+.player-progress {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  align-self: stretch;
+}
+
+.player-progress-bar {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 3px;
+  width: 283px;
+  height: 6px;
+  background: #f6f6ef;
+}
+.player-progress-inner {
+  width: 120px;
+  height: 6px;
+  border-radius: 3px;
+  background: var(--purple, #e783bc);
+}
+
+.player-time-current {
+  color: var(--gray, #909090);
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.player-time-total {
+  color: var(--gray, #909090);
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+/* ----- button ---- */
+
+.button {
+  display: flex;
+  width: auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.player-button-play {
+  display: flex;
+  width: 74px;
+  height: 74px;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 37px;
+  background: var(--purple, #e783bc);
+}
+
+.fa-play {
+  color: var(--white, #ffffff);
+  font-family: "Font Awesome 6 Free";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 900;
+}
+
+.fa-pause {
+  color: var(--white, #c32d2d);
+  font-family: "Font Awesome 6 Free";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 900;
+}
+
+.player-button-pause {
+  display: none;
+}
